# rag-all-techniques

./: .env_example  .gitignore  README.md  envexample  pyproject.toml
app/: 01_simple_rag.py  02_semantic_chunking.py  03_context_enriched.py  04_contextual_chunk_headers.py  05_doc_augmentation.py  06_query_transformation.py  07_rerank.py  08_rse.py  09_contextual_compression.py  10_feedback_loop.py  11_adaptive.py  12_self_rag.py  13_hierarchical_rag.py  14_hyde.py  15_hybrid.py  16_crag.py
data/: xiyouji.md
docs/: rag_flowchart.md
utils/: chroma_utils.py  common_utils.py  embedding_model.py  file_utils.py  llm_utils.py  logger_utils.py  similarity_utils.py
